tools/solidity-parser/src/parser_implementation.rs
use chumsky::prelude::*;
use chumsky::primitive::Just;
use chumsky::Parser;
#[allow(unused_imports)]
use syntax_schema::chumsky::combinators::*;
#[allow(dead_code)]
fn repetition_mapper<E, S>((e, es): (E, Vec<(S, E)>)) -> (Vec<E>, Vec<S>) {
    let mut expressions = vec![e];
    let mut separators = vec![];
    for (s, e) in es.into_iter() {
        separators.push(s);
        expressions.push(e);
    }
    (expressions, separators)
}
#[allow(dead_code)]
#[inline]
fn terminal(str: &str) -> Just<char, &str, ErrorType> {
    just(str)
}
use super::parser_interface::*;
use super::tree_interface::*;

impl Parsers {
    pub fn new() -> Self {
        let mut block_parser = Recursive::declare();

        let mut expression_parser = Recursive::declare();

        let mut ignore_parser = Recursive::declare();

        let mut statement_parser = Recursive::declare();

        let mut type_name_parser = Recursive::declare();

        let mut yul_block_parser = Recursive::declare();

        let mut yul_expression_parser = Recursive::declare();

        // AddSubOperator = '+' | '-' ;
        let add_sub_operator_parser = filter(|&c: &char| c == '+' || c == '-').boxed();

        // AssignmentOperator = '=' | '|=' | '^=' | '&=' | '<<=' | '>>=' | '>>>=' | '+=' | '-=' | '*=' | '/=' | '%=' ;
        let assignment_operator_parser = choice::<_, ErrorType>((
            terminal("%=").map(|_| 2usize),
            terminal("&=").map(|_| 2usize),
            terminal("*=").map(|_| 2usize),
            terminal("+=").map(|_| 2usize),
            terminal("-=").map(|_| 2usize),
            terminal("/=").map(|_| 2usize),
            terminal("<<=").map(|_| 3usize),
            terminal("=").map(|_| 1usize),
            terminal(">>").ignore_then(choice((
                terminal("=").map(|_| 3usize),
                terminal(">=").map(|_| 4usize),
            ))),
            terminal("^=").map(|_| 2usize),
            terminal("|=").map(|_| 2usize),
        ))
        .boxed();

        // BreakStatement = 'break' ';' ;
        let break_statement_parser = terminal("break")
            .map(|_| 5usize)
            .then(just(';'))
            .map(|v| Box::new(break_statement::_S0::new(v)))
            .boxed();

        // «Comment» = '/*' { ¬'*' | 1…*{ '*' } ¬( '*' | '/' ) } 1…*{ '*' } '/' ;
        let comment_parser = terminal("/*")
            .map(|_| 2usize)
            .then(
                choice((
                    filter(|&c: &char| c != '*').map(|v| Box::new(comment::_C2::StarChar(v))),
                    just('*')
                        .repeated()
                        .at_least(1usize)
                        .then(filter(|&c: &char| c != '*' && c != '/'))
                        .map(|v| Box::new(comment::_S3::new(v)))
                        .map(|v| Box::new(comment::_C2::_S3(v))),
                ))
                .repeated(),
            )
            .then(just('*').repeated().at_least(1usize))
            .then(just('/'))
            .map(|v| Box::new(comment::_S0::new(v)))
            .boxed();

        // ContinueStatement = 'continue' ';' ;
        let continue_statement_parser = terminal("continue")
            .map(|_| 8usize)
            .then(just(';'))
            .map(|v| Box::new(continue_statement::_S0::new(v)))
            .boxed();

        // DataLocation = 'memory' | 'storage' | 'calldata' ;
        let data_location_parser = choice::<_, ErrorType>((
            terminal("calldata").map(|_| 8usize),
            terminal("memory").map(|_| 6usize),
            terminal("storage").map(|_| 7usize),
        ))
        .boxed();

        // EqualityComparisonOperator = '==' | '!=' ;
        let equality_comparison_operator_parser = choice::<_, ErrorType>((
            terminal("!=").map(|_| 2usize),
            terminal("==").map(|_| 2usize),
        ))
        .boxed();

        // «LineComment» = '//' { ¬( '\u{a}' | '\u{d}' ) } ;
        let line_comment_parser = terminal("//")
            .map(|_| 2usize)
            .then(filter(|&c: &char| c != '\n' && c != '\r').repeated())
            .map(|v| Box::new(line_comment::_S0::new(v)))
            .boxed();

        // MulDivModOperator = '*' | '/' | '%' ;
        let mul_div_mod_operator_parser =
            filter(|&c: &char| c == '*' || c == '/' || c == '%').boxed();

        // OrderComparisonOperator = '<' | '>' | '<=' | '>=' ;
        let order_comparison_operator_parser = choice::<_, ErrorType>((
            terminal("<").ignore_then(choice((
                terminal("=").map(|_| 2usize),
                empty().map(|_| 1usize),
            ))),
            terminal(">").ignore_then(choice((
                terminal("=").map(|_| 2usize),
                empty().map(|_| 1usize),
            ))),
        ))
        .boxed();

        // PositionalArgumentList = 1…*{ Expression / ',' } ;
        let positional_argument_list_parser = expression_parser
            .clone()
            .then(just(',').then(expression_parser.clone()).repeated())
            .map(repetition_mapper)
            .map(|v| Box::new(positional_argument_list::_S0::new(v)))
            .boxed();

        // ShiftOperator = '<<' | '>>' | '>>>' ;
        let shift_operator_parser = choice::<_, ErrorType>((
            terminal("<<").map(|_| 2usize),
            terminal(">>").ignore_then(choice((
                terminal(">").map(|_| 3usize),
                empty().map(|_| 2usize),
            ))),
        ))
        .boxed();

        // StateMutabilitySpecifier = 'pure' | 'view' | 'payable' ;
        let state_mutability_specifier_parser = choice::<_, ErrorType>((
            terminal("p").ignore_then(choice((
                terminal("ayable").map(|_| 7usize),
                terminal("ure").map(|_| 4usize),
            ))),
            terminal("view").map(|_| 4usize),
        ))
        .boxed();

        // UnaryPrefixOperator = '++' | '--' | '!' | '~' | 'delete' | '-' ;
        let unary_prefix_operator_parser = choice::<_, ErrorType>((
            terminal("!").map(|_| 1usize),
            terminal("++").map(|_| 2usize),
            terminal("-").ignore_then(choice((
                terminal("-").map(|_| 2usize),
                empty().map(|_| 1usize),
            ))),
            terminal("delete").map(|_| 6usize),
            terminal("~").map(|_| 1usize),
        ))
        .boxed();

        // UnarySuffixOperator = '++' | '--' ;
        let unary_suffix_operator_parser = choice::<_, ErrorType>((
            terminal("++").map(|_| 2usize),
            terminal("--").map(|_| 2usize),
        ))
        .boxed();

        // UncheckedBlock = 'unchecked' Block ;
        let unchecked_block_parser = terminal("unchecked")
            .map(|_| 9usize)
            .then(block_parser.clone())
            .map(|v| Box::new(unchecked_block::_S0::new(v)))
            .boxed();

        // VisibilitySpecifier = 'internal' | 'external' | 'private' | 'public' ;
        let visibility_specifier_parser = choice::<_, ErrorType>((
            terminal("external").map(|_| 8usize),
            terminal("internal").map(|_| 8usize),
            terminal("p").ignore_then(choice((
                terminal("rivate").map(|_| 7usize),
                terminal("ublic").map(|_| 6usize),
            ))),
        ))
        .boxed();

        // «Whitespace» = '\u{20}' | '\u{9}' | '\u{d}' | '\u{a}' ;
        let whitespace_parser =
            filter(|&c: &char| c == ' ' || c == '\t' || c == '\r' || c == '\n').boxed();

        // YulBreakStatement = 'break' ;
        let yul_break_statement_parser = terminal("break").map(|_| 5usize).boxed();

        // YulContinueStatement = 'continue' ;
        let yul_continue_statement_parser = terminal("continue").map(|_| 8usize).boxed();

        // YulLeaveStatement = 'leave' ;
        let yul_leave_statement_parser = terminal("leave").map(|_| 5usize).boxed();

        // «IGNORE» = { «Whitespace» | «Comment» | «LineComment» } ;
        ignore_parser.define(
            choice((
                choice::<_, ErrorType>((
                    terminal("\t").map(|_| 1usize),
                    terminal("\n").map(|_| 1usize),
                    terminal("\r").map(|_| 1usize),
                    terminal(" ").map(|_| 1usize),
                ))
                .map(|v| Box::new(ignore::_C1::_0(v))),
                comment_parser
                    .clone()
                    .map(|v| Box::new(ignore::_C1::Comment(v))),
                line_comment_parser
                    .clone()
                    .map(|v| Box::new(ignore::_C1::LineComment(v))),
            ))
            .repeated()
            .boxed(),
        );

        // «AsciiEscape» = 'n' | 'r' | 't' | '\'' | '"' | '\\' | '\u{a}' | '\u{d}' ;
        let ascii_escape_parser = filter(|&c: &char| {
            c == 'n'
                || c == 'r'
                || c == 't'
                || c == '\''
                || c == '"'
                || c == '\\'
                || c == '\n'
                || c == '\r'
        })
        .boxed();

        // «BooleanLiteral» = 'true' | 'false' ;
        let boolean_literal_parser = choice::<_, ErrorType>((
            terminal("false").map(|_| 5usize),
            terminal("true").map(|_| 4usize),
        ))
        .boxed();

        // «DecimalInteger» = 1…*{ '0'…'9' / [ '_' ] } ;
        let decimal_integer_parser = filter(|&c: &char| ('0' <= c && c <= '9'))
            .then(
                just('_')
                    .or_not()
                    .then(filter(|&c: &char| ('0' <= c && c <= '9')))
                    .repeated(),
            )
            .map(repetition_mapper)
            .map(|v| Box::new(decimal_integer::_S0::new(v)))
            .boxed();

        // «FixedBytesType» = 'bytes' ( '1' | '2' | '3' | '4' | '5' | '6' | '7' | '8' | '9' | '10' | '11' | '12' | '13' | '14' | '15' | '16' | '17' | '18' | '19' | '20' | '21' | '22' | '23' | '24' | '25' | '26' | '27' | '28' | '29' | '30' | '31' | '32' ) ;
        let fixed_bytes_type_parser = terminal("bytes")
            .map(|_| 5usize)
            .then(choice::<_, ErrorType>((
                terminal("1").ignore_then(choice((
                    terminal("0").map(|_| 2usize),
                    terminal("1").map(|_| 2usize),
                    terminal("2").map(|_| 2usize),
                    terminal("3").map(|_| 2usize),
                    terminal("4").map(|_| 2usize),
                    terminal("5").map(|_| 2usize),
                    terminal("6").map(|_| 2usize),
                    terminal("7").map(|_| 2usize),
                    terminal("8").map(|_| 2usize),
                    terminal("9").map(|_| 2usize),
                    empty().map(|_| 1usize),
                ))),
                terminal("2").ignore_then(choice((
                    terminal("0").map(|_| 2usize),
                    terminal("1").map(|_| 2usize),
                    terminal("2").map(|_| 2usize),
                    terminal("3").map(|_| 2usize),
                    terminal("4").map(|_| 2usize),
                    terminal("5").map(|_| 2usize),
                    terminal("6").map(|_| 2usize),
                    terminal("7").map(|_| 2usize),
                    terminal("8").map(|_| 2usize),
                    terminal("9").map(|_| 2usize),
                    empty().map(|_| 1usize),
                ))),
                terminal("3").ignore_then(choice((
                    terminal("0").map(|_| 2usize),
                    terminal("1").map(|_| 2usize),
                    terminal("2").map(|_| 2usize),
                    empty().map(|_| 1usize),
                ))),
                terminal("4").map(|_| 1usize),
                terminal("5").map(|_| 1usize),
                terminal("6").map(|_| 1usize),
                terminal("7").map(|_| 1usize),
                terminal("8").map(|_| 1usize),
                terminal("9").map(|_| 1usize),
            )))
            .map(|v| Box::new(fixed_bytes_type::_S0::new(v)))
            .boxed();

        // «FixedType» = 'fixed' [ '1'…'9' { '0'…'9' } 'x' '1'…'9' { '0'…'9' } ] ;
        let fixed_type_parser = terminal("fixed")
            .map(|_| 5usize)
            .then(
                filter(|&c: &char| ('1' <= c && c <= '9'))
                    .then(filter(|&c: &char| ('0' <= c && c <= '9')).repeated())
                    .then(just('x'))
                    .then(filter(|&c: &char| ('1' <= c && c <= '9')))
                    .then(filter(|&c: &char| ('0' <= c && c <= '9')).repeated())
                    .map(|v| Box::new(fixed_type::_S2::new(v)))
                    .or_not(),
            )
            .map(|v| Box::new(fixed_type::_S0::new(v)))
            .boxed();

        // «HexCharacter» = '0'…'9' | 'a'…'f' | 'A'…'F' ;
        let hex_character_parser = filter(|&c: &char| {
            ('0' <= c && c <= '9') || ('a' <= c && c <= 'f') || ('A' <= c && c <= 'F')
        })
        .boxed();

        // «IdentifierStart» = '_' | '$' | 'a'…'z' | 'A'…'Z' ;
        let identifier_start_parser = filter(|&c: &char| {
            c == '_' || c == '$' || ('a' <= c && c <= 'z') || ('A' <= c && c <= 'Z')
        })
        .boxed();

        // «NumberUnit» = 'wei' | 'gwei' | 'ether' | 'seconds' | 'minutes' | 'hours' | 'days' | 'weeks' | 'years' ;
        let number_unit_parser = choice::<_, ErrorType>((
            terminal("days").map(|_| 4usize),
            terminal("ether").map(|_| 5usize),
            terminal("gwei").map(|_| 4usize),
            terminal("hours").map(|_| 5usize),
            terminal("minutes").map(|_| 7usize),
            terminal("seconds").map(|_| 7usize),
            terminal("we").ignore_then(choice((
                terminal("eks").map(|_| 5usize),
                terminal("i").map(|_| 3usize),
            ))),
            terminal("years").map(|_| 5usize),
        ))
        .boxed();

        // «PragmaDirective» = 'pragma' ¬';' { ¬';' } ';' ;
        let pragma_directive_parser = terminal("pragma")
            .map(|_| 6usize)
            .then(filter(|&c: &char| c != ';'))
            .then(filter(|&c: &char| c != ';').repeated())
            .then(just(';'))
            .map(|v| Box::new(pragma_directive::_S0::new(v)))
            .boxed();
